[package]
name = "aoc-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
reqwest = { version = "0.11.7", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
